--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 tokio = {version = "1.47.0", features = ["full"]}
 anyhow = "1.0.98"
 tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
