--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ tokio = {version = "1.47.0", features = ["full"]}
 anyhow = "1.0.98"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+num-bigint = "0.4.6"
+ordered-float = "5.0.0"
