--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2024"
 
 [dependencies]
 tokio = {version = "1.47.0", features = ["full"]}
-futures = "0.3.31"
-anyhow = "1.0.98"
+thiserror = "2.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 num-bigint = "0.4.6"
